# cv-tutorial-cpp

./: .gitignore  CMakeLists.txt  README.md  detect_face.cpp  opencv.cpp  openvino.cpp  scrfd.cpp  scrfd.hpp
openvino_files/: scrfd_2.5g_bnkps.mapping  scrfd_2.5g_bnkps.xml
